--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,7 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "joi": "^17.4.0",
     "mongoose": "^5.12.14",
     "nodemon": "^2.0.7"
   },
